--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-roughviz": "^0.1.8",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
